<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Octoller</string>
    <string name="action_settings">设置</string>
    <string name="action_connect">连接</string>
    <string name="action_connect_bt">蓝牙</string>
    <string name="action_connect_wifi">WIFI</string>
    <string name="action_request_master">申请控制权</string>
    <string name="action_disconnect">断开</string>
    <string name="action_release_master">释放控制权</string>
    <string name="action_go_back">返回</string>
    <string name="manipulator_speech">语音交互</string>
    <string name="manipulator_flight">飞行器</string>
    <string name="manipulator_drive">驾驶</string>
    <string name="manipulator_maps">缩略图</string>
    <string name="manipulator_multitouch">多指操作</string>
    <string name="title_activity_picking">锁定视角</string>
    <string name="text_welcome">欢迎使用，请先连接服务器</string>
    <string name="text_slavery_hint">如需控制，请点击菜单中的“申请控制权”项目</string>
    <string name="hint_nothing_selected">没有选中物体</string>
    
    <string name="btn_find">寻找设备</string>
    <string name="bt_not_avaliable">蓝牙不可用</string>
    <string name="bt_not_enabled_leaving">蓝牙没有启用</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其他可配对设备</string>
    <string name="button_scan">搜索设备</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="scanning">设备搜索中</string>
    <string name="none_found">没有找到设备</string>
    <string name="select_device">请选择一个要进行连接的设备</string>
    <string name="connect">连接一个设备</string>
    <string name="discoverable">将本设备设成可见</string>
    <string name="title_connected_to">已连接的设备：</string>
    <string name="title_connecting">连接中</string>
    <string name="title_not_connected">没有连接</string>
    <string name="text_move_up">上移</string>
    <string name="text_move_down">下移</string>
    <string name="text_move_left">左移</string>
    <string name="text_move_right">右移</string>
    <string name="text_move_in">内移</string>
    <string name="text_move_out">外移</string>
    <string name="text_move_clockwise">顺时针</string>
    <string name="text_move_counterclockwise">逆时针</string>

    <string name="error_base_url_not_specified">Please specify base_url for ATily widget.</string>
    <string name="error_network_timeout">Network timeout.</string>
    <string name="error_response_parsing_error">Error parsing network response.</string>
    
</resources>