<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/btn_lock_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/lock_btn"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <Button
            android:id="@+id/btn_mani_pen_speech"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/btn_pen"
            android:enabled="false"
            android:text="@string/manipulator_pen_speech" />

        <Button
            android:id="@+id/btn_mani_flight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/btn_plane"
            android:text="@string/manipulator_flight" />

        <Button
            android:id="@+id/btn_mani_drive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/btn_car"
            android:text="@string/manipulator_drive" />

        <Button
            android:id="@+id/btn_mani_map"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/btn_maps"
            android:text="@string/manipulator_maps" />
        
        <Button
            android:id="@+id/btn_mani_multitouch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/btn_finger"
            android:text="@string/manipulator_multitouch" />
    </LinearLayout>

</RelativeLayout>